arrow, other symbols

--- a/css/style.css
+++ b/css/style.css
@@ -876,6 +876,17 @@
 					z-index: 1;
 				}
 
+    #book
+		{
+		}
+		
+			#book .pic
+			{
+				position: relative;
+				display: block;
+			}
+
+
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
